# openmesh

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  VERSION  conanfile.py
CI/: Windows.bat  ci-cppcheck.sh  ci-doc.sh  ci-linux.sh  ci-mac.sh  ci-source.sh
Doc/: changelog.docu  compiling.docu  mainpage.docu  misc.docu  tutorial_03.docu
Doc/Tutorial/03-properties/: smooth.cc
cmake/: ACGCommon.cmake  ACGCompiler.cmake  ACGQt.cmake  FindGLEW.cmake  FindGLUT.cmake  FindGoogleTest.cmake  FindOpenMesh.cmake  fixbundle.cmake.win.in
src/OpenMesh/Apps/: CMakeLists.txt
src/OpenMesh/Apps/Decimating/: DecimaterViewerWidget.hh
src/OpenMesh/Apps/Decimating/DecimaterGui/: CMakeLists.txt
src/OpenMesh/Apps/Decimating/commandlineDecimater/: CMakeLists.txt
src/OpenMesh/Apps/Dualizer/: CMakeLists.txt
src/OpenMesh/Apps/ProgViewer/: CMakeLists.txt
src/OpenMesh/Apps/QtViewer/: CMakeLists.txt  MeshViewerWidget.cc  MeshViewerWidget.hh  MeshViewerWidgetT.hh
src/OpenMesh/Apps/Smoothing/: CMakeLists.txt
src/OpenMesh/Apps/Subdivider/: adaptive_subdivider.cc
src/OpenMesh/Apps/Subdivider/SubdividerGui/: CMakeLists.txt
src/OpenMesh/Apps/Subdivider/commandlineAdaptiveSubdivider/: CMakeLists.txt
src/OpenMesh/Apps/Subdivider/commandlineSubdivider/: CMakeLists.txt
src/OpenMesh/Apps/Unsupported/Streaming-qt4/Server/: VDPMServerSession.cc
src/OpenMesh/Apps/Unsupported/Streaming/Server/: VDPMServerSession.cc
src/OpenMesh/Apps/VDProgMesh/Analyzer/: CMakeLists.txt  vdpmanalyzer.cc
src/OpenMesh/Apps/VDProgMesh/Synthesizer/: CMakeLists.txt
src/OpenMesh/Apps/VDProgMesh/mkbalancedpm/: CMakeLists.txt
src/OpenMesh/Apps/mconvert/: CMakeLists.txt
src/OpenMesh/Core/: CMakeLists.txt
src/OpenMesh/Core/Geometry/: Vector11T.hh  VectorT.hh
src/OpenMesh/Core/IO/: IOInstances.hh  OMFormat.cc  OMFormat.hh  Options.hh
src/OpenMesh/Core/IO/exporter/: BaseExporter.hh  ExporterT.hh
src/OpenMesh/Core/IO/importer/: BaseImporter.hh  ImporterT.hh
src/OpenMesh/Core/IO/reader/: BaseReader.hh  OBJReader.cc  OMReader.cc  PLYReader.cc  STLReader.cc
src/OpenMesh/Core/IO/writer/: OBJWriter.cc  OMWriter.cc  OMWriter.hh
src/OpenMesh/Core/Mesh/: ArrayKernel.hh  BaseKernel.hh  CirculatorsT.hh  Handles.hh  IteratorsT.hh  PolyConnectivity.cc  PolyConnectivity.hh  PolyMeshT.cc  PolyMeshT.hh  TriConnectivity.cc  TriConnectivity.hh  TriMeshT.hh
src/OpenMesh/Core/System/: config.h  mostream.hh
src/OpenMesh/Core/Utils/: PropertyContainer.hh  PropertyManager.hh
src/OpenMesh/Tools/: CMakeLists.txt
src/OpenMesh/Tools/Decimater/: DecimaterT.cc  DecimaterT.hh  ModHausdorffT.cc
src/OpenMesh/Tools/SmartTagger/: SmartTaggerT.cc  SmartTaggerT.hh
src/OpenMesh/Tools/Smoother/: JacobiLaplaceSmootherT.cc
src/OpenMesh/Tools/Subdivider/Adaptive/Composite/: RulesT.cc
src/OpenMesh/Tools/Subdivider/Uniform/: CatmullClarkT.cc  CatmullClarkT.hh  LoopT.hh  MidpointT.hh  ModifiedButterFlyT.hh  Sqrt3InterpolatingSubdividerLabsikGreinerT.hh  SubdividerT.hh
src/OpenMesh/Tools/Subdivider/Uniform/Composite/: CompositeT.cc
src/OpenMesh/Tools/Utils/: conio.cc
src/OpenMesh/Tools/VDPM/: VHierarchy.cc  VHierarchyWindow.cc  ViewingParameters.cc
src/Python/: CMakeLists.txt  Decimater.hh  PropertyManager.hh  Vector.hh
src/Python/Example/: CMakeLists.txt
src/Unittests/: CMakeLists.txt  unittests_common_customtraits.hh  unittests_convert_meshes.cc  unittests_cpp_11_features.cc  unittests_property.cc  unittests_propertymanager.cc  unittests_read_write_OBJ.cc  unittests_read_write_OM.cc  unittests_read_write_PLY.cc  unittests_smarttagger.cc  unittests_split_copy.cc  unittests_split_edge_copy.cc  unittests_sr_binary.cc  unittests_subdivider_uniform.cc  unittests_trimesh_others.cc  unittests_trimesh_split.cc  unittests_tutorials.cc  unittests_vector_type.cc
src/Unittests/TestFiles/: cube_tri_version_10_5.om
